优化角色菜单问题