@@ -1,5 +1,6 @@
-package com.houtu.mp.module.sys.service.impl;
+package com.houtu.mp.module.base.service.impl;
 
+import com.houtu.mp.config.security.SecuritySupport;
 import com.houtu.mp.config.security.SimpleUser;
 import com.houtu.mp.module.sys.dao.SysMenuDao;
 import com.houtu.mp.module.sys.dao.SysRoleDao;
@@ -7,6 +8,7 @@ import com.houtu.mp.module.sys.entity.SysMenuEntity;
 import com.houtu.mp.module.sys.entity.SysRoleEntity;
 import com.houtu.mp.module.sys.entity.SysUserEntity;
 import com.houtu.mp.module.sys.service.SysUserService;
+import com.houtu.mp.support.type.CommonStatus;
 import jakarta.annotation.Resource;
 import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -38,15 +40,20 @@ public class UserDetailServiceImpl implements UserDetailsService {
             throw new UsernameNotFoundException("user is not exists");
         }
         List<SimpleGrantedAuthority> authorities = new ArrayList<>();
-        List<SysRoleEntity> sysRoleEntityList = sysRoleDao.queryUserRoleList(sysUserEntity.getUserId(), 1);
+        boolean admin = false; // 是否是超级管理员
+        List<SysRoleEntity> sysRoleEntityList = sysRoleDao.queryUserRoleList(sysUserEntity.getUserId(), CommonStatus.ENABLED.getStatus());
         if (sysRoleEntityList != null && !sysRoleEntityList.isEmpty()) {
-            authorities.addAll(sysRoleEntityList.parallelStream().filter(r -> StringUtils.isNotBlank(r.getRolePerms())).map(r -> new SimpleGrantedAuthority(r.getRolePerms())).collect(Collectors.toList()));
-            List<SysMenuEntity> sysMenuEntities = sysMenuDao.queryMenuByRoleIds(sysRoleEntityList.parallelStream().map(SysRoleEntity::getRoleId).collect(Collectors.toList()), 1, null);
-            if (sysMenuEntities != null && !sysMenuEntities.isEmpty()) {
-                authorities.addAll(sysMenuEntities.parallelStream().filter(p-> StringUtils.isNotBlank(p.getPerms())).map(m -> new SimpleGrantedAuthority(m.getPerms())).collect(Collectors.toSet()));
+            List<String> rolePerms = sysRoleEntityList.parallelStream().filter(r -> StringUtils.isNotBlank(r.getRolePerms())).map(r -> r.getRolePerms()).toList();
+            admin = rolePerms.parallelStream().anyMatch(p -> SecuritySupport.hasAdmin(p));
+            if (!admin) {
+                authorities.addAll(rolePerms.parallelStream().map(p -> new SimpleGrantedAuthority(p)).toList());
+                List<SysMenuEntity> sysMenuEntities = sysMenuDao.queryMenuByRoleIds(sysRoleEntityList.parallelStream().map(SysRoleEntity::getRoleId).toList(), CommonStatus.ENABLED.getStatus(), null);
+                if (sysMenuEntities != null && !sysMenuEntities.isEmpty()) {
+                    authorities.addAll(sysMenuEntities.parallelStream().filter(p-> StringUtils.isNotBlank(p.getPerms())).map(m -> new SimpleGrantedAuthority(m.getPerms())).collect(Collectors.toSet()));
+                }
             }
         }
-        SimpleUser simpleUser = new SimpleUser(sysUserEntity.getUserName(), sysUserEntity.getPassword(), Objects.equals(sysUserEntity.getStatus(), 1), true, true, true, authorities);
+        SimpleUser simpleUser = new SimpleUser(sysUserEntity.getUserName(), sysUserEntity.getPassword(), Objects.equals(sysUserEntity.getStatus(), 1), true, true, true, admin, authorities);
         simpleUser.setUserId(sysUserEntity.getUserId());
         simpleUser.setEnableMFA(BooleanUtils.toBoolean(sysUserEntity.getEnableMFA()));
         return simpleUser;
